--- a/index.html
+++ b/index.html
@@ -83,18 +83,17 @@
 
                 <!-- <img src="https://i.postimg.cc/5yZQnDpb/ukraine-7424066-640.webp" />-->
                 <p>
-                    You are the person I have been dreaming of all my life, so allow me to 
-                    express my intense love for you. You are the most precious thing in my 
-                    life.  You have fascinated my heart and seized my mind with your
-                    magnetic presence, and I keep dreaming of yourself. Your memories are 
-                    invaluable treasure of my life, which are locked inside my heart. The 
-                    time with you was the most mesmerizing and delightful of my 
-                    life. <br />
+                    Happy birthday to the dearest Shaanu!! 💖. This birthday, I wish you
+                    abundant happiness and love. May all your dreams turns into reality. 
+                    🌸Happy birthday to one of the sweetest people I've ever known..🤗💓.
+                    Wishing you a beautiful day with happiness and good health forever..♾️With 
+                    you, every day feels like an special day, I want to remind you of how deeply
+                    you are loved and cherished.🫶 and I am beyond grateful for every moment 
+                    we share....💌💗 <br />
                     <br />
-                    I take this opportunity to ask for your consent if you want to be my
-                    life partner. This letter is a token of my love for you.  
+                    Again and Again Happiest Birthday my dear best friend..💗💎.  
                     
-                                                           Love From Arnav Kumar 💖<br />
+                                                           Regards From Aman Kumar 💖<br />
                     If You Accept
                     <a href="new.html">Click Here</a>
                 </p>
