--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
 
             <div id="letter">
-                <h1>For Dear <span>Shannu</span></h1>
+                <h1>For Dear <span>Shaanu</span></h1>
 
                 <!-- <img src="https://i.postimg.cc/5yZQnDpb/ukraine-7424066-640.webp" />-->
                 <p>
