--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     Again and Again Happiest Birthday my dear best friend..💗💎.  
                     
                                                            Regards From Aman Kumar 💖<br />
-                    If You Accept
+                    Thank You Best Friend for coming in my life
                     <a href="new.html">Click Here</a>
                 </p>
             </div>
